--- a/index.html
+++ b/index.html
@@ -5,50 +5,101 @@
   <title>📈 모의 주식 시뮬레이터</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: 'Segoe UI', sans-serif; padding: 20px; background: #f4f6f9; }
-    h1 { text-align: center; margin-bottom: 30px; }
+    :root {
+      --bg-color: #f7f9fb;
+      --text-color: #000;
+      --panel-color: #fff;
+    }
+
+    body.dark {
+      --bg-color: #1e1e1e;
+      --text-color: #ddd;
+      --panel-color: #2c2c2c;
+    }
+
+    body {
+      font-family: sans-serif;
+      padding: 20px;
+      background: var(--bg-color);
+      color: var(--text-color);
+      transition: all 0.3s;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
     .panel {
-      background: white;
+      background: var(--panel-color);
       border-radius: 12px;
       padding: 20px;
       margin-bottom: 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      line-height: 1.8;
-      font-size: 16px;
     }
-    #stockChart { width: 100%; height: 300px; }
+
+    #stockChart {
+      width: 100%;
+      height: 300px;
+    }
+
     textarea {
       width: 100%;
       height: 100px;
-      font-family: monospace;
+      background: #f0f0f0;
+      border: none;
       padding: 10px;
-      font-size: 14px;
+      border-radius: 8px;
     }
+
     button {
       cursor: pointer;
-      padding: 6px 12px;
-      margin: 2px;
-      font-size: 14px;
+      padding: 8px 12px;
+      margin: 4px 2px;
+      border-radius: 6px;
+      border: none;
+      background-color: #007bff;
+      color: white;
     }
-    select, input[type="number"] {
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    select, input {
       padding: 6px;
-      font-size: 14px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
       margin-right: 8px;
     }
-    .stock-line {
-      border-bottom: 1px solid #eee;
-      padding: 5px 0;
+
+    .dark select, .dark input, .dark textarea {
+      background: #444;
+      color: #eee;
+      border: 1px solid #666;
     }
-    .stock-line:last-child { border-bottom: none; }
+
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .top-bar button {
+      background: #333;
+      color: #fff;
+    }
   </style>
 </head>
 <body>
-  <h1>📈 모의 주식 시뮬레이터</h1>
+  <div class="top-bar">
+    <h1>📈 모의 주식 시뮬레이터</h1>
+    <button onclick="toggleDarkMode()">🌙 다크모드</button>
+  </div>
 
   <div class="panel">
-    💰 자산: <strong id="cash"></strong>원 |
-    총 평가금액: <strong id="totalValue"></strong>원 |
-    수익률: <strong id="roi"></strong>%
+    💰 자산: <span id="cash"></span>원 |
+    총 평가금액: <span id="totalValue"></span>원 |
+    수익률: <span id="roi"></span>%
   </div>
 
   <div class="panel">
@@ -57,8 +108,8 @@
     <input type="number" id="amount" value="1" min="1">
     <button onclick="buyStock()">매수</button>
     <button onclick="sellStock()">매도</button>
-    <button onclick="shortStock()">숏</button>
-    <button onclick="coverShort()">청산</button>
+    <button onclick="shortSell()">숏 진입</button>
+    <button onclick="shortCover()">숏 매도</button>
   </div>
 
   <div class="panel" id="stockInfo"></div>
@@ -73,20 +124,30 @@
   </div>
 
   <div class="panel">
-    <button onclick="resetAllData()" style="background: red; color: white; padding: 8px 12px; border: none; border-radius: 6px;">🗑️ 초기화</button>
+    <button onclick="resetAllData()" style="background: red;">🗑️ 초기화</button>
   </div>
 
   <script>
     const initialPrices = {
-      '삼성전자': 70000, '현대차': 180000, 'LG에너지솔루션': 400000, '카카오': 60000,
-      '네이버': 200000, 'SK하이닉스': 130000, '삼성SDI': 600000, 'POSCO': 350000,
-      '한화솔루션': 50000, '셀트리온': 160000, '씨젠': 30000, '두산에너빌리티': 25000,
-      'HMM': 15000, '팬오션': 10000, '한국전력': 1000
+      '삼성전자': 70000,
+      '현대차': 180000,
+      'LG에너지솔루션': 400000,
+      '카카오': 60000,
+      '네이버': 200000,
+      'SK하이닉스': 130000,
+      '삼성SDI': 600000,
+      'POSCO': 350000,
+      '한화솔루션': 50000,
+      '셀트리온': 160000,
+      '씨젠': 30000,
+      '두산에너빌리티': 25000,
+      'HMM': 15000,
+      '팬오션': 10000,
+      '한국전력': 1000
     };
 
     let prices = JSON.parse(localStorage.getItem('stockPrices')) || structuredClone(initialPrices);
     let stocks = Object.entries(prices).map(([name, price]) => ({ name, price }));
-
     let portfolio = JSON.parse(localStorage.getItem('portfolio')) || {};
     let cash = parseInt(localStorage.getItem('cash') || "100000");
     let logs = JSON.parse(localStorage.getItem('logs')) || [];
@@ -107,19 +168,12 @@
       document.getElementById('cash').textContent = cash.toLocaleString();
       let total = cash;
       const info = stocks.map(s => {
-        const p = portfolio[s.name] || { quantity: 0, short: 0, logs: [] };
-        const holdingValue = (p.quantity - p.short) * s.price;
-        const lastBuy = p.logs.filter(l => l.action === "buy").slice(-1)[0];
-        const avg = lastBuy ? lastBuy.price : 0;
-        const gain = avg ? ((s.price - avg) / avg * 100).toFixed(2) : '0.00';
-        const shortAvg = (p.logs.filter(l => l.action === "short").slice(-1)[0] || {}).price || 0;
-        const shortGain = shortAvg ? ((shortAvg - s.price) / shortAvg * 100).toFixed(2) : '0.00';
+        const p = portfolio[s.name] || { quantity: 0, short: 0, shortPrice: 0, logs: [] };
+        const holdingValue = p.quantity * s.price;
+        const shortProfit = p.short > 0 ? (p.shortPrice - s.price) * p.short : 0;
+        total += holdingValue + shortProfit;
 
-        if (p.quantity > 0 || p.short > 0) {
-          total += p.quantity * s.price - p.short * s.price;
-        }
-
-        return `<div class="stock-line"><b>${s.name}</b> | 현재가: ${s.price.toLocaleString()}원 | 보유: ${p.quantity}주 | 숏: ${p.short}주 | 수익률: ${gain}% | 숏 수익률: ${shortGain}%</div>`;
+        return `<div><b>${s.name}</b> | 현재가: ${s.price.toLocaleString()}원 | 보유: ${p.quantity}주 | 숏: ${p.short}주 @${p.shortPrice || 0} | 숏이익: ${shortProfit.toLocaleString()}원</div>`;
       }).join('');
       document.getElementById('stockInfo').innerHTML = info;
       const roi = (((total - 100000) / 100000) * 100).toFixed(2);
@@ -139,7 +193,7 @@
       const cost = stock.price * amount;
       if (cash >= cost) {
         cash -= cost;
-        if (!portfolio[currentStock]) portfolio[currentStock] = { quantity: 0, short: 0, logs: [] };
+        if (!portfolio[currentStock]) portfolio[currentStock] = { quantity: 0, short: 0, shortPrice: 0, logs: [] };
         portfolio[currentStock].quantity += amount;
         portfolio[currentStock].logs.push({ action: "buy", price: stock.price });
         logAction(`${currentStock} ${amount}주 매수 @${stock.price}`);
@@ -160,31 +214,32 @@
       }
     }
 
-    function shortStock() {
-      if (cash >= 0) {
-        alert("보유 자산이 0원 이하일 때만 숏 포지션을 잡을 수 있습니다.");
-        return;
-      }
-      const stock = stocks.find(s => s.name === currentStock);
-      const amount = parseInt(document.getElementById('amount').value);
-      if (!portfolio[currentStock]) portfolio[currentStock] = { quantity: 0, short: 0, logs: [] };
-      portfolio[currentStock].short += amount;
-      cash += stock.price * amount;
-      portfolio[currentStock].logs.push({ action: "short", price: stock.price });
-      logAction(`${currentStock} ${amount}주 숏진입 @${stock.price}`);
-      updateUI();
-    }
-
-    function coverShort() {
+    function shortSell() {
       const stock = stocks.find(s => s.name === currentStock);
       const amount = parseInt(document.getElementById('amount').value);
       const cost = stock.price * amount;
-      const p = portfolio[currentStock];
-      if (p && p.short >= amount && cash >= cost) {
+      if (cash >= cost) {
         cash -= cost;
+        if (!portfolio[currentStock]) portfolio[currentStock] = { quantity: 0, short: 0, shortPrice: 0, logs: [] };
+        portfolio[currentStock].short += amount;
+        portfolio[currentStock].shortPrice = stock.price;
+        portfolio[currentStock].logs.push({ action: "short", price: stock.price });
+        logAction(`${currentStock} ${amount}주 숏 진입 @${stock.price}`);
+        updateUI();
+      }
+    }
+
+    function shortCover() {
+      const stock = stocks.find(s => s.name === currentStock);
+      const amount = parseInt(document.getElementById('amount').value);
+      const p = portfolio[currentStock];
+      if (p && p.short >= amount) {
+        const gain = (p.shortPrice - stock.price) * amount;
+        cash += stock.price * amount + gain;
         p.short -= amount;
+        if (p.short === 0) p.shortPrice = 0;
         p.logs.push({ action: "cover", price: stock.price });
-        logAction(`${currentStock} ${amount}주 숏청산 @${stock.price}`);
+        logAction(`${currentStock} ${amount}주 숏 매도 (청산) @${stock.price} | 이익: ${gain}`);
         updateUI();
       }
     }
@@ -222,7 +277,7 @@
           datasets: [{
             label: name,
             data: data.data,
-            borderColor: 'blue',
+            borderColor: 'skyblue',
             fill: false
           }]
         },
@@ -247,6 +302,17 @@
       });
     }
 
+    function toggleDarkMode() {
+      document.body.classList.toggle('dark');
+    }
+
+    function resetAllData() {
+      if (confirm("정말로 모든 데이터를 초기화하시겠습니까?")) {
+        localStorage.clear();
+        location.reload();
+      }
+    }
+
     document.getElementById('stockSelect').addEventListener('change', e => {
       currentStock = e.target.value;
       renderChart(currentStock);
@@ -265,13 +331,6 @@
       renderChart(currentStock);
       updateUI();
       document.getElementById('logArea').value = logs.slice(-100).join('\n');
-    }
-
-    function resetAllData() {
-      if (confirm("정말로 모든 데이터를 초기화하시겠습니까? 이 작업은 되돌릴 수 없습니다.")) {
-        localStorage.clear();
-        location.reload();
-      }
     }
 
     setInterval(() => {
